# SchrodingersCAT

./: Cargo.toml  README.md
crates/cat-axioms/src/: lib.rs
crates/cat-compiler/src/: ir.rs  lib.rs
crates/cat-core/src/: main.rs
crates/cat-memory/: Cargo.toml
crates/cat-memory/src/: geometry.rs  lib.rs  store.rs
