# Cargo.toml
[workspace]
members = [
    "crates/cat-memory",
    "crates/cat-axioms",
    "crates/cat-compiler",
    "crates/cat-core",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Jahangirian"]
description = "Schrödinger's CAT: Sovereign Intelligence Protocol"
