# ./Cargo.toml
[workspace]
members = [
    "crates/cat-memory",
    "crates/cat-axioms",
    "crates/cat-compiler",
    "crates/cat-core",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Jahangirian"]

[workspace.dependencies]
# Minimal dependencies for Sovereign Protocol
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3" # For binary serialization
blake3 = "1.5"  # Faster hashing alternative
